--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -98,6 +98,11 @@ input {
     outline: none;
 }
 
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
 /*========= REUSABLE CSS CLASSES ==========*/
 .container {
     max-width: 1320px;
@@ -150,6 +155,21 @@ input {
     color: var(--text-color-light);
     font-size: var(--smaller-font-size);
     text-decoration: line-through;
+}
+
+.form {
+    row-gap: 1rem;
+}
+
+.form__group {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+.textarea {
+    height: 200px;
+    padding-block: 1rem;
+    resize: none;
 }
 
 /*========= HEADER & NAV ==========*/
@@ -337,10 +357,19 @@ input {
     color: var(--first-color);
 }
 
-.btn--md {
+.btn--md,
+.btn--sm {
     font-family: var(--body-font);
+}
+
+.btn--md {
     height: 45px;
     line-height: 42px;
+}
+
+.btn--sm {
+    height: 40px;
+    line-height: 36px;
 }
 
 /*============ CATEGORIES ============*/
@@ -952,4 +981,209 @@ input {
 
 .details__small-img {
     cursor: pointer;
+    max-height: 100px;
+}
+
+.details__title {
+    font-size: var(--h2-font-size);
+}
+
+.details__brand {
+    font-size: var(--small-font-size);
+    margin-block: 1rem;
+}
+
+.details__brand span {
+    color: var(--first-color);
+}
+
+.details__price {
+    border-top: 1px solid var(--border-color-alt);
+    border-bottom: 1px solid var(--border-color-alt);
+    padding-block: 1rem;
+    column-gap: 1rem;
+}
+
+.details__price .new__price {
+    font-size: var(--h2-font-size);
+}
+
+.details__price .old__price {
+    font-size: var(--normal-font-size);
+    font-weight: var(--weght-500)
+}
+
+.short__description {
+    margin-block: 1rem 2rem;
+}
+
+.list__item,
+.meta__list {
+    font-size: var(--small-font-size);
+    margin-bottom: 0.75rem;
+}
+
+.details__color,
+.details__size {
+    column-gap: .75rem;
+}
+
+.details__color {
+    margin-block: 2rem 1.5rem;
+}
+
+.details__size {
+    margin-bottom: 2.5rem;
+}
+
+.details__color-title,
+.details__size-title {
+    font-size: var(--small-font-size);
+    font-weight: var(--weght-600);
+}
+
+.color__list,
+.size__list {
+    display: flex;
+    column-gap: .25rem;
+}
+
+.color__link {
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    display: block;
+}
+
+.size__link {
+    border: 1px solid var(--border-color-alt);
+    padding: 0.375rem 0.75rem 0.5rem;
+    color: var(--text-color);
+    font-size: var(--small-font-size);
+}
+
+.size-active {
+    background-color: var(--first-color);
+    color: var(--body-color);
+}
+
+.details__action {
+    display: flex;
+    column-gap: 0.375rem;
+    margin-bottom: 3.25rem;
+}
+
+.quantity,
+.details__action-btn {
+    border: 1px solid var(--border-color-alt);
+    font-size: var(--small-font-size);
+}
+
+.quantity {
+    max-width: 80px;
+    padding-block: 0.5rem;
+    padding-inline: 1rem 0.5rem;
+    border-radius: .25rem;
+}
+
+.details__action-btn {
+    columns: var(--text-color);
+    line-height: 40px;
+    padding-inline: 0.75rem;
+}
+
+.details__meta {
+    border-top: 1px solid var(--border-color-alt);
+    padding-top: 1rem;
+}
+
+/*============== DETAILS INFO & REVIEWS ==============*/
+.detail__tabs {
+    display: flex;
+    column-gap: 1.75rem;
+    margin-bottom: 3rem;
+}
+
+.detail__tab {
+    font-family: var(--second-font);
+    font-size: var(--large-font-size);
+    font-weight: var(--weght-600);
+    cursor: pointer;
+}
+
+.detail__tab.active-tab {
+    color: var(--first-color);
+}
+
+.details__tab-content:not(.active-tab) {
+    display: none;
+}
+
+.info__table tr th,
+.info__table tr td {
+    border: 1px solid var(--border-color-alt);
+    padding: 0.625rem 1.25rem;
+}
+
+.info__table tr th {
+    font-weight: var(--weght-500);
+    text-align: left;
+}
+
+.info__table tr td {
+    color: var(--text-color-light);
+}
+
+.reviews__container {
+    padding-bottom: 3rem;
+    row-gap: 1.25rem;
+}
+
+.review__single {
+    border-bottom: 1px solid var(--border-color-alt);
+    padding-bottom: 1.25rem;
+    display: flex;
+    align-items: flex-start;
+    column-gap: 1.5rem;
+}
+
+.review__single:last-child {
+    padding-bottom: 3rem;
+}
+
+.review__img {
+    width: 70px;
+    border-radius: 50%;
+    margin-bottom: 0.5rem;
+}
+
+.review__title {
+    font-size: var(--tiny-font-size);
+}
+
+.review__data {
+    width: calc(100% - 94px);
+}
+
+.review__description {
+    margin-bottom: 0.5rem;
+}
+
+.review__rating {
+    color: hsl(42, 100%, 50%);
+    margin-bottom: .25rem;
+}
+
+.review__rating,
+.review__date {
+    font-size: var(--small-font-size);
+}
+
+.review__form-title {
+    font-size: var(--large-font-size);
+    margin-bottom: 1rem;
+}
+
+.rate__product {
+    margin-bottom: 2rem;
 }
