--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -21,7 +21,8 @@
     /*=========== Font and typography ===============*/
     /* .5rem = 8px | 1rem = 16px ... */
     --body-font: 'Roboto', sans-serif;
-    --second-font: 'League Spartan', sans-serif;
+    /*--second-font: 'League Spartan', sans-serif;*/
+    --second-font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     --big-font-size: 3.5rem;
     --h1-font-size: 2.75rem;
     --h2-font-size: 2rem;
@@ -45,7 +46,18 @@
 
 /* Responsive typography */
 @media screen and (max-width: 1200px) {
-
+    :root{
+        --big-font-size: 2.25rem;
+        --h1-font-size: 2rem;
+        --h2-font-size: 1.375rem;
+        --h3-font-size: 1.25rem;
+        --h4-font-size: 1.125rem;
+        --large-font-size: 1rem;
+        --normal-font-size: 0.9375rem;
+        --small-font-size: 0.8125rem;
+        --smaller-font-size: 0.6875rem
+        ;--tiny-font-size: 0.625rem;
+    }
 }
 
 /*========= BASE ==========*/
@@ -276,11 +288,11 @@ table {
     right: -0.625rem;
     background-color: var(--first-color);
     color: var(--body-color);
-    height: 18px;
-    width: 10px;
+    width: auto;
+    padding-left: 2px;
+    padding-right: 2px;
     line-height: 18px;
-    /*border-radius: 50%;*/
-    border-radius: 20px;
+    border-radius: 50%;
     text-align: center;
     font-size: var(--tiny-font-size);
 }
@@ -444,7 +456,7 @@ table {
     cursor: pointer;
 }
 
-.product__container {
+.products__container {
     grid-template-columns: repeat(4, 1fr);
 }
 
@@ -811,6 +823,7 @@ table {
     font-family: var(--second-color);
     font-size: var(--small-font-size);
     font-weight: var(--weght-600);
+    text-align: center;
 }
 
 .newsletter__form {
@@ -1250,11 +1263,13 @@ table {
 .table__description,
 .table__price,
 .table__subtotal,
-.table__trash {
+.table__trash,
+.table__stock {
     font-size: var(--small-font-size)
 }
 
-.table__title {
+.table__title,
+.table__stock {
     color: var(--first-color);
 }
 
@@ -1296,4 +1311,271 @@ table {
     padding-inline: 1.25rem;
     position: relative;
     z-index: 10;
+}
+
+.cart__group {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: flex-start;
+}
+
+.cart__shipping .section__title,
+.cart__coupon .section__title,
+.cart__total .section__title {
+    font-size: var(--large-font-size);
+    margin-bottom: 1rem;
+}
+
+.cart__coupon {
+    margin-top: 3rem;
+}
+
+.coupon__form .form__group {
+    align-items: center;
+}
+
+.cart__total {
+    border: 1px solid var(--border-color-alt);
+    border-radius: 0.25rem;
+    padding: 1.75rem;
+}
+
+.cart__total-table {
+    margin-bottom: 1rem;
+}
+
+.cart__total-table tr td {
+    border: 1px solid var(--border-color-alt);
+    padding: 0.75rem 0.5rem;
+    width: 50%;
+}
+
+.cart__total-title {
+    font-size: var(--small-font-size);
+}
+
+.cart__total-price {
+    color: var(--first-color);
+    font-weight: var(--weght-700);
+}
+
+.cart__total .btn {
+    display: inline-flex;
+}
+
+/*=========== CHECKOUT ============*/
+.checkout__container {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.checkout__group:nth-child(2) {
+    border: 1px solid var(--border-color-alt);
+    padding: 2rem;
+    border-radius: 0.5rem;
+}
+
+.checkout__group .section__title {
+    font-size: var(--large-font-size);
+}
+
+.checkout__title {
+    font-size: var(--small-font-size);
+}
+
+.order__table tr th,
+.order__table tr td {
+    border: 1px solid var(--border-color-alt);
+    padding: .5rem;
+    text-align: center;
+}
+
+.order__table tr th {
+    color: var(--title-color);
+    font-size: var(--small-font-size);
+}
+
+.order__img {
+    width: 80px;
+}
+
+.table__quantity,
+.order__subtitle {
+    font-size: var(--small-font-size)
+}
+
+.order__grand-total {
+    color: var(--first-color);
+    font-size: var(--large-font-size);
+    font-weight: var(--weght-700);
+}
+
+.payment__methods {
+    margin-block: 2.5rem 2.75rem;
+}
+
+.payment__title {
+    font-size: var(--weght-500);
+    margin-bottom: 1.5rem;
+}
+
+.payment__option {
+    margin-bottom: 1rem;
+}
+
+.payment__input {
+    accent-color: var(--first-color);
+}
+
+.payment__label {
+    font-size: var(--small-font-size);
+}
+
+/*============== COMPARE ==================*/
+.compare__table tr th,
+.compare__table tr td {
+    padding: 0.5rem;
+    border: 1px solid var(--border-color-alt);
+}
+
+.compare__table tr th {
+    color: var(--text-color-light);
+    font-size: var(--small-font-size);
+}
+
+.compare__table tr td {
+    text-align: center;
+}
+
+.compare__colors {
+    justify-content: center;
+}
+
+.table__weihght,
+.table__dimension {
+    font-size: var(--small-font-size);
+}
+
+/*=========== LOGIN & REGISTER ===========*/
+.login-register__container {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: flex-start;
+}
+
+.login,
+.register {
+    border: 1px solid var(--border-color-alt);
+    padding: 2rem;
+    border-radius: 0.5rem;
+}
+
+/*=========== ACCOUNTS ===========*/
+.accounts__container {
+    grid-template-columns: 4fr 8fr;
+}
+
+.account__tabs {
+    border: 1px solid var(--border-color-alt);
+    border-radius: 0.25rem;
+}
+
+.account__tab {
+    padding: 1rem 2rem;
+    columns: var(--title-color);
+    font-size: var(--small-font-size);
+    display: flex;
+    align-items: center;
+    column-gap: 0.625rem;
+    cursor: pointer;
+}
+
+.account__tab.active-tab {
+    background-color: var(--first-color);
+    color: var(--body-color);
+}
+
+.account__tab:not(:last-child) {
+    border-bottom: 1px solid var(--border-color-alt);
+}
+
+.tab__content:not(.active-tab) {
+    display: none;
+}
+
+.tab__content {
+    border: 1px solid var(--border-color-alt);
+}
+
+.tab__header {
+    background-color: var(--container-color);
+    border-bottom: 1px solid var(--border-color-alt);
+    padding: 1rem;
+    font-size: var(--small-font-size);
+}
+
+.tab__body {
+    padding: 1rem;
+}
+
+.placed__order-table tr th {
+    color: var(--title-color);
+    text-align: left;
+}
+
+.placed__order-table tr th,
+.placed__order-table tr td {
+    border: 1px solid var(--border-color-alt);
+    padding: 0.5rem;
+    font-size: var(--small-font-size);
+}
+
+.view__order,
+.edit {
+    color: var(--first-color);
+}
+
+.address {
+    font-style: normal;
+    font-size: var(--small-font-size);
+    line-height: 1.5rem;
+}
+
+.city {
+    margin-bottom: 0.25rem;
+}
+
+.edit {
+    font-size: var(--small-font-size);
+}
+
+/*============= BREAKPOINTS ================*/
+/* For large devices */
+@media screen and (max-width: 1400px) {
+    .container {
+        max-width: 1140px;
+    }  
+
+    .products__container,
+    .showcase__container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .accounts__container {
+        grid-template-columns: 3fr 9fr;
+    }
+}
+
+@media screen and (max-width: 1200px) {  
+}
+
+/* For medium devices */
+@media screen and (max-width: 992px) {  
+}
+
+@media screen and (max-width: 768px) {  
+}
+
+/* For small devices */
+@media screen and (max-width: 576px) {  
+}
+
+@media screen and (max-width: 350px) {  
 }
