--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -446,7 +446,8 @@ table {
 /*============= PRODUCTS =============*/
 .tab__btns {
     display: flex;
-    column-gap: 0.75rem;
+    flex-wrap: wrap;
+    gap: 0.75rem;
     margin: 2rem;
 }
 
@@ -1290,6 +1291,7 @@ table {
 .cart__actions {
     display: flex;
     justify-content: flex-end;
+    flex-wrap: wrap;
     gap: 0.75rem;
     margin-top: 1.5rem;
 }
@@ -1895,5 +1897,42 @@ table {
     }
 }
 
-@media screen and (max-width: 350px) {  
+@media screen and (max-width: 350px) { 
+    .header__search {
+        width: auto;
+    }
+    
+    .action__btn {
+        width: 36px;
+        height: 36px;
+        line-height: 38px;
+    } 
+
+    .cart__btn {
+        bottom: 1.4rem;
+        right: 1.25rem;
+    }
+
+    .showcase__item {
+        column-gap: 1rem;
+    }
+
+    .showcase__img {
+        width: 70px;
+    }
+
+    .showcase__content {
+        width: calc(100% - 86px);
+    }
+
+    .swiper-button-next,
+    .swiper-button-prev {
+        display: none;
+    }
+
+    .compare__table tr th,
+    .cart__total-table tr td {
+        display: block;
+        width: 100%;
+    }
 }
